--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
           fetch-depth: 0 # If you use VALIDATE_ALL_CODEBASE = true, you can remove this line to improve performances
-          exclude_rules: "REPOSITORY_DEVSKIM,CHECKOV,CSPELL"
+          exclude_rules: "devskim,actionlint,CHECKOV,CSPELL"
 
       # MegaLinter
       - name: MegaLinter
