--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -7,7 +7,7 @@ on:
   # Trigger mega-linter at every push. Action will also be visible from Pull Requests to main
   push: # Comment this line to trigger action only on pull-requests (not recommended if you don't pay for GH Actions)
   pull_request:
-    branches: [master, main]
+    branches: [master, dev]
 
 env: # Comment env block if you do not want to apply fixes
   # Apply linter fixes configuration
@@ -23,6 +23,7 @@ jobs:
   build:
     name: MegaLinter
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       # Git Checkout
       - name: Checkout Code
