exclude certain tests on cicd

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -23,6 +23,8 @@ jobs:
   build:
     name: MegaLinter
     runs-on: ubuntu-latest
+    env:
+      MEGALINTER_EXCLUSIONS: checkmake,pyright,pylint,terrascan,kics,checkov
     permissions: write-all
     steps:
       # Git Checkout
@@ -44,7 +46,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
-          DISABLE: COPYPASTE,SPELL,REPOSITORY,CHECKMAKE,PYLINT,PYRIGHT,TERRASCAN,KICS # Uncomment to disable copy-paste and spell checks
+          DISABLE: COPYPASTE,SPELL,REPOSITORY # Uncomment to disable copy-paste and spell checks
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
