--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -44,7 +44,18 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
-          DISABLE: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV # Uncomment to disable copy-paste and spell checks
+          DISABLE: 
+            - COPYPASTE
+            - SPELL
+            - REPOSITORY
+            - MAKEFILE_CHECKMAKE
+            - PYTHON_PYRIGHT
+            - PYTHON_PYLINT
+            - TERRAFORM_KICS
+            - TERRAFORM_CHECKOV
+            - TERRAFORM_TERRASCAN
+            - SQL_SQL_LINT
+            - SQL_TSQLLINT # Uncomment to disable copy-paste and spell checks
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
