disable python bandit in cicd. Hardcoded sql command should be replaced in the future.

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -45,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
           DISABLE: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT
-          DISABLE_LINTERS: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT
+          DISABLE_LINTERS: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT,PYTHON_BANDIT
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
