--- a/dbt/dbt_project/dbt_project.yml
+++ b/dbt/dbt_project/dbt_project.yml
@@ -1,7 +1,4 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
 name: 'dbt_project'
 version: '1.0.0'
 config-version: 2
@@ -10,8 +7,6 @@ config-version: 2
 profile: 'dbt_project'
 
 # These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -34,4 +29,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_project:
     # Config indicated by + and applies to all files under models/example/
+    
+seeds:
+  description: 'A description of the country_data seed.'
+  root_path: '/app/dbt_project/seeds/'
+  delimiter: ','
+  header_row: true
+
     
