--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -44,8 +44,8 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on main, else just the git diff with main. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
-          DISABLE: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT
-          DISABLE_LINTERS: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT,PYTHON_BANDIT
+          DISABLE: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT,YAML_V8R,MARKDOWN_MARKDOWN_LINK_CHECK,MARKDOWN_MARKDOWNLINT
+          DISABLE_LINTERS: COPYPASTE,SPELL,REPOSITORY,MAKEFILE_CHECKMAKE,PYTHON_PYRIGHT,PYTHON_PYLINT,TERRAFORM_KICS,TERRAFORM_CHECKOV,TERRAFORM_TERRASCAN,SQL_SQL_LINT,SQL_TSQLLINT,PYTHON_BANDIT,YAML_V8R,MARKDOWN_MARKDOWN_LINK_CHECK,MARKDOWN_MARKDOWNLINT
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
